@@ -13,14 +13,15 @@ The above copyright notice and this permission notice shall be included in all c
 portions of the Software.
 
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
-LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. 
+LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
 IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
-WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE 
+WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */
 package st.redline.smalltalk.interpreter;
 
 import st.redline.smalltalk.Smalltalk;
+import st.redline.smalltalk.SourceFile;
 
 public class Analyser implements NodeVisitor {
 
@@ -33,6 +34,7 @@ public class Analyser implements NodeVisitor {
 	}
 
 	public void visit(Program program) {
+		generator.generateProgram(sourceFile());
 		program.sequence().accept(this);
 	}
 
@@ -71,5 +73,9 @@ public class Analyser implements NodeVisitor {
 
 	public void visit(UnaryMessage unaryMessage) {
 		System.out.println(unaryMessage);
+	}
+
+	private SourceFile sourceFile() {
+		return smalltalk.currentFile();
 	}
 }
